--- a/IsaakD_MULT213_A1.html
+++ b/IsaakD_MULT213_A1.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <title>MULT 213 - Assignment 1</title>
+  <link rel="stylesheet" href="a1_style.css">
+  <title>MULT 213 - Assignment 1</title>
 </head>
 
 <body>
   <script type="module" src="a1_script.js"></script>
   <h1>Total Amount</h1>
   <div id="total"></div>
-  <h1>Pokemon Names and Types They Are</h1>
+  <h1>Pokemon Information Cards</h1>
   <div id="output"></div>
   <h1>Some Fun Stats All About Averages!</h1>
   <div id="candies"></div>
