Added a new for loop that adds together every number from the spawn_chance in the json file. It then averages the total and sets it to 2 decimal places, and then prints it out to the chance div. chance div was also added to the HTML file, along with some spacing to make everything look less clustered.

--- a/IsaakD_MULT213_A1.html
+++ b/IsaakD_MULT213_A1.html
@@ -8,13 +8,20 @@
 
 <body>
   <script type="module" src="a1_script.js"></script>
+
   <h1>Total Amount</h1>
+
   <div id="total"></div>
+
   <h1>Pokemon Information Cards</h1>
+
   <div id="output"></div>
+
   <h1>Some Fun Stats All About Averages!</h1>
+
   <div id="candies"></div>
   <div id="average_spawns"></div>
+  <div id="chance"></div>
 </body>
 
 </html>
